replaced deprecated Byte, Integer, Float ... usage